Revision history for cif-router-perl v1.

0.99.04 2012-08-XX
    - added query api restriction (eg: domain/malware, infrastructure/botnet, etc...)

0.99.03 2012-07031
    - bugfixes
    - added submission interface
    - added key expiration check

0.99.02 2012-06-24
    - bugfixes, some re-factoring

0.99.01 2012-04-27
    - initial release
    - re-factored old CIF::WebAPI out to the CIF::Router::REST driver